<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/txtvSpeedSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edtSpeedSize" />

        <Spinner
            android:id="@+id/spSpeedMorse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/speed" />

    </LinearLayout>

    <Switch
        android:id="@+id/swLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:showText="true"
        android:text="Light"
        android:textOff="Off"
        android:textOn="ON"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swLight">

        <TextView
            android:id="@+id/txtvLuxMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LuxMin" />

        <SeekBar
            android:id="@+id/skbLuxMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/edtInputMorze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtInputMorze"
            android:inputType="text" />

        <Switch
            android:id="@+id/swMorze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swMorze"
            android:textOff="Ні"
            android:textOn="Так" />

        <EditText
            android:id="@+id/edtOutputMorze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:hint="@string/edtOutputMorze"
            android:inputType="text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>